update to 3.0.0
