# adapter-access/adapter-openapi.yaml
@@ -6,6 +6,57 @@ servers:
 - url: http://localhost:8088
   description: Generated server url
 paths:
+  /adapter/product/{id}:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getProductById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ProductProductResponse'
+  /adapter/product/pan/{pan}:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getProductByPan
+      parameters:
+      - name: pan
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ProductProductResponse'
+  /adapter/clients:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getAllClients
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ClientResponse'
   /adapter/client/{id}:
     get:
       tags:
@@ -24,7 +75,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/ClientResponse'
+                $ref: '#/components/schemas/ClientClientResponse'
   /adapter/client/phone-number:
     get:
       tags:
@@ -42,7 +93,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/ClientResponse'
+                $ref: '#/components/schemas/ClientClientResponse'
   /adapter/client/pan:
     get:
       tags:
@@ -60,7 +111,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/ClientResponse'
+                $ref: '#/components/schemas/ClientClientResponse'
   /adapter/client/fio:
     get:
       tags:
@@ -90,7 +141,40 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ClientResponse'
+                  $ref: '#/components/schemas/ClientClientResponse'
+  /adapter/admin:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getAllAdmins
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AdminResponse'
+  /adapter/admin/{id}:
+    get:
+      tags:
+      - adapter-controller
+      operationId: getAdminById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AdminResponse'
 components:
   schemas:
     AccountResponse:
@@ -101,10 +185,10 @@ components:
           format: int32
         accountNumber:
           type: string
-        amount:
+        cash:
           type: integer
           format: int32
-    ClientResponse:
+    ProductClientResponse:
       type: object
       properties:
         id:
@@ -120,11 +204,7 @@ components:
           type: string
         isBlocked:
           type: boolean
-        products:
-          type: array
-          items:
-            $ref: '#/components/schemas/ProductResponse'
-    ProductResponse:
+    ProductProductResponse:
       type: object
       properties:
         id:
@@ -149,5 +229,94 @@ components:
           type: boolean
         isBlocked:
           type: boolean
+        expiredDate:
+          type: string
+          format: date
+        clientResponse:
+          $ref: '#/components/schemas/ProductClientResponse'
         accountResponse:
           $ref: '#/components/schemas/AccountResponse'
+    ClientResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        surname:
+          type: string
+        name:
+          type: string
+        lastName:
+          type: string
+        phoneNumber:
+          type: string
+        isBlocked:
+          type: boolean
+    ClientClientResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        surname:
+          type: string
+        name:
+          type: string
+        lastName:
+          type: string
+        phoneNumber:
+          type: string
+        isBlocked:
+          type: boolean
+        products:
+          type: array
+          items:
+            $ref: '#/components/schemas/ClientProductResponse'
+    ClientProductResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        createdAt:
+          type: string
+          format: date-time
+        pan:
+          type: string
+        pin:
+          type: string
+        cvv:
+          type: string
+        rbs:
+          type: string
+        active:
+          type: boolean
+        inAccess:
+          type: boolean
+        outAccess:
+          type: boolean
+        isBlocked:
+          type: boolean
+        expiredDate:
+          type: string
+          format: date
+        accountResponse:
+          $ref: '#/components/schemas/AccountResponse'
+    AdminResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        surname:
+          type: string
+        name:
+          type: string
+        lastname:
+          type: string
+        phoneNumber:
+          type: string
+        post:
+          type: string
+        registration:
+          type: string
